Add font size and font weight.

--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
         </div>
       </div>
       <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/in/ajith-k-s/"
-          >LinkedIn</a
-        >
+        <a href="https://www.linkedin.com/in/ajith-k-s/">LinkedIn</a>
         <!-- <a class="footer-link" href="https://twitter.com/">Twitter</a> -->
         <!-- <a class="footer-link" href="https://www.appbrewery.co/">Website</a> -->
         <p class="copyright">© 2023 Ajith K. S.</p>
