Add Flex Settings.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,36 @@
         <hr />
         <div class="skills">
           <h2>My Skills.</h2>
+          <div class="flex-container">
+            <div>
+              <img
+                class="img-flex center-div"
+                src="images/axios.png"
+                alt="axios logo"
+              />
+            </div>
+            <div>
+              <img
+                class="img-flex center-div"
+                src="images/bootstrap.png"
+                alt="bootstrap logo"
+              />
+            </div>
+            <div>
+              <img
+                class="img-flex center-div"
+                src="images/css.png"
+                alt="css logo"
+              />
+            </div>
+            <div>
+              <img
+                class="img-flex center-div"
+                src="images/expressjs.png"
+                alt="expressjs logo"
+              />
+            </div>
+          </div>
           <div class="skill-row">
             <img
               class="code-img-left"
