Add Flex Settings 4.

--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="flex-container">
-            <div>
+            <div class="flex-div">
               <img
                 class="img-flex center-div"
                 src="images/axios.png"
                 alt="axios logo"
               />
             </div>
-            <div>
+            <div class="flex-div">
               <img
                 class="img-flex center-div"
                 src="images/bootstrap.png"
                 alt="bootstrap logo"
               />
             </div>
-            <div>
+            <div class="flex-div">
               <img
                 class="img-flex center-div"
                 src="images/css.png"
                 alt="css logo"
               />
             </div>
-            <div>
+            <div class="flex-div">
               <img
                 class="img-flex center-div"
                 src="images/expressjs.png"
