Fix flex container.

--- a/index.html
+++ b/index.html
@@ -44,31 +44,72 @@
           <h2>My Skills.</h2>
           <div class="flex-container">
             <div>
-              <img
-                class="img-flex center-div"
-                src="images/axios.png"
-                alt="axios logo"
-              />
+              <img class="img-flex" src="images/axios.png" alt="axios logo" />
             </div>
             <div>
               <img
-                class="img-flex center-div"
+                class="img-flex"
                 src="images/bootstrap.png"
                 alt="bootstrap logo"
               />
             </div>
             <div>
+              <img class="img-flex" src="images/css.png" alt="css logo" />
+            </div>
+            <div>
               <img
-                class="img-flex center-div"
-                src="images/css.png"
-                alt="css logo"
+                class="img-flex"
+                src="images/expressjs.png"
+                alt="expressjs logo"
+              />
+            </div>
+            <div>
+              <img class="img-flex" src="images/git.png" alt="git logo" />
+            </div>
+            <div>
+              <img class="img-flex" src="images/html.png" alt="html logo" />
+            </div>
+            <div>
+              <img class="img-flex" src="images/js.png" alt="javascript logo" />
+            </div>
+            <div>
+              <img class="img-flex" src="images/jquery.png" alt="jquery logo" />
+            </div>
+            <div>
+              <img
+                class="img-flex"
+                src="images/mongodb.png"
+                alt="mongodb logo"
+              />
+            </div>
+            <div>
+              <img class="img-flex" src="images/nodejs.png" alt="nodejs logo" />
+            </div>
+            <div>
+              <img
+                class="img-flex"
+                src="images/postgresql.png"
+                alt="postgresql logo"
+              />
+            </div>
+            <div>
+              <img class="img-flex" src="images/python.png" alt="python logo" />
+            </div>
+            <div>
+              <img class="img-flex" src="images/react.png" alt="react logo" />
+            </div>
+            <div>
+              <img
+                class="img-flex"
+                src="images/restapi.png"
+                alt="restapi logo"
               />
             </div>
             <div>
               <img
-                class="img-flex center-div"
-                src="images/expressjs.png"
-                alt="expressjs logo"
+                class="img-flex"
+                src="images/vscode.png"
+                alt="visual studio code logo"
               />
             </div>
           </div>
