Removed old divs.

--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
         />
       </div>
       <div class="middle-container">
-        <div>
+        <div class="profile-flex">
           <img class="profile" src="images/Ajith.png" alt="Profile image" />
           <h2>Hello.</h2>
           <p class="intro">
-            I'm a detail-oriented, goal-oriented, and thoughtful professional,
-            prepared to achieve excellence through selective and focused pursuit
-            of short-term and long-term goals. I possess the ability to work
+            I enjoy coding things from scratch, and bringing ideas to life in
+            the browser.
+            <br />
+            I'm a detail-oriented, and thoughtful professional, prepared to
+            achieve excellence through selective and focused pursuit of
+            short-term and long-term goals. I possess the ability to work
             effectively both independently and as part of a team. I prefer to
             keep learning, continue challenging myself, and do interesting
             things that matter.
@@ -112,53 +115,6 @@
                 alt="visual studio code logo"
               />
             </div>
-          </div>
-          <div class="skill-row">
-            <img
-              class="code-img-left"
-              src="images/coding.png"
-              alt="Coding image"
-            />
-            <h3>Coding</h3>
-            <p>
-              I like to code things from scratch, and enjoy bringing ideas to
-              life in the browser.
-            </p>
-          </div>
-          <div class="skill-row">
-            <img
-              class="code-img-right"
-              src="images/html.png"
-              alt="HTML image"
-            />
-            <h3>HTML</h3>
-            <p>
-              Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
-              bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
-              eu, rutrum nam.
-            </p>
-          </div>
-          <div class="skill-row">
-            <img class="code-img-left" src="images/css.png" alt="CSS image" />
-            <h3>CSS</h3>
-            <p>
-              Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
-              bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
-              eu, rutrum nam.
-            </p>
-          </div>
-          <div class="skill-row">
-            <img
-              class="code-img-right"
-              src="images/js.png"
-              alt="Javascript image"
-            />
-            <h3>JAVASCRIPT</h3>
-            <p>
-              Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
-              bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
-              eu, rutrum nam.
-            </p>
           </div>
         </div>
         <hr />
