--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <main>
       <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="Cloud's image" />
-        <h1>I'm Ajith.</h1>
-        <h2>a <span class="pro">pro</span>grammer.</h2>
+        <h1>I'm Ajith K. S.,</h1>
+        <h2>a Full-Stack Web Developer.</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="Cloud's image" />
         <img
           class="mountain"
@@ -120,7 +120,7 @@
         <hr />
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+          <h3>Leveling up, one day at a time.</h3>
           <p class="contact-message">
             Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
             tellus donec dui, ornare erat.
@@ -129,7 +129,9 @@
         </div>
       </div>
       <div class="bottom-container">
-        <a href="https://www.linkedin.com/in/ajith-k-s/">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/ajith-k-s/" target="_blank"
+          >LinkedIn</a
+        >
         <!-- <a class="footer-link" href="https://twitter.com/">Twitter</a> -->
         <!-- <a class="footer-link" href="https://www.appbrewery.co/">Website</a> -->
         <p class="copyright">© 2023 Ajith K. S.</p>
