Add dynamic date.

--- a/index.html
+++ b/index.html
@@ -134,9 +134,14 @@
         >
         <!-- <a class="footer-link" href="https://twitter.com/">Twitter</a> -->
         <!-- <a class="footer-link" href="https://www.appbrewery.co/">Website</a> -->
-        <p class="copyright">© 2023 Ajith K. S.</p>
+        <p class="copyright">
+          Copyright ©
+          <script>
+            document.write(new Date().getUTCFullYear());
+          </script>
+          Ajith K. S. All rights reserved.
+        </p>
       </div>
     </main>
-    <!-- <script src="index.js"></script> -->
   </body>
 </html>
