Change mountain image.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="middle-container">
         <div class="profile-flex">
           <img class="profile" src="images/Ajith.png" alt="Profile image" />
-          <h2>Hello.</h2>
+          <h2>Hello!</h2>
           <p class="intro">
             I enjoy coding things from scratch, and bringing ideas to life in
             the browser.
@@ -44,7 +44,7 @@
         </div>
         <hr />
         <div class="skills">
-          <h2>My Skills.</h2>
+          <h2>My Skills</h2>
           <div class="flex-container">
             <div>
               <img class="img-flex" src="images/axios.png" alt="axios logo" />
@@ -118,7 +118,7 @@
           </div>
         </div>
         <hr />
-        <div class="contact-me">
+        <div class="contact-me contact-flex">
           <h2>Get In Touch</h2>
           <h3>Leveling up, one day at a time.</h3>
           <p class="contact-message">
