Fix mountain image transparency.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <main>
       <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="Cloud's image" />
-        <h1>I'm Ajith K. S.,</h1>
-        <h2>a Full-Stack Web Developer.</h2>
+        <div class="top-flex">
+          <h1>I'm Ajith K. S.,</h1>
+          <h2>a Full-Stack Web Developer.</h2>
+        </div>
         <img class="bottom-cloud" src="images/cloud.png" alt="Cloud's image" />
         <img
           class="mountain"
