Combine several classes.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Montserrat&family=Sacramento&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/a9caa6910a.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- CSS Stylesheets -->
+    <link rel="stylesheet" href="css/styles.css" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <main>
@@ -130,7 +142,14 @@
           <a class="btn" href="mailto:ajithks98086@gmail.com">CONTACT ME</a>
         </div>
       </div>
-      <div class="bottom-container">
+      <div class="bottom-container atype">
+        <span class="pi-bullet-icon"
+          ><i class="fa-solid fa-phone-flip"></i
+        ></span>
+        <strong>Phone No.:</strong><span>+91 7034933473</span><span> | </span>
+        <span class="pi-bullet-icon"><i class="fa-solid fa-envelope"></i></span>
+        <strong>Email:</strong>
+        <a href="mailto:ajithks98086@gmail.com">ajithks98086@gmail.com</a> |
         <a href="https://www.linkedin.com/in/ajith-k-s/" target="_blank"
           >LinkedIn</a
         >
