--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         />
       </div>
       <div class="middle-container">
-        <div class="profile-flex">
+        <div class="profile-flex profile-contact-flex">
           <img class="profile" src="images/Ajith.png" alt="Profile image" />
           <h2>Hello!</h2>
           <p class="intro">
@@ -132,7 +132,7 @@
           </div>
         </div>
         <hr />
-        <div class="contact-me contact-flex">
+        <div class="contact-flex profile-contact-flex">
           <h2>Get In Touch</h2>
           <h3>Leveling up, one day at a time.</h3>
           <p class="contact-message">
