Fix margin to icon.

--- a/index.html
+++ b/index.html
@@ -142,19 +142,38 @@
           <a class="btn" href="mailto:ajithks98086@gmail.com">CONTACT ME</a>
         </div>
       </div>
-      <div class="bottom-container atype">
-        <span class="pi-bullet-icon"
-          ><i class="fa-solid fa-phone-flip"></i
-        ></span>
-        <strong>Phone No.:</strong><span>+91 7034933473</span><span> | </span>
-        <span class="pi-bullet-icon"><i class="fa-solid fa-envelope"></i></span>
-        <strong>Email:</strong>
-        <a href="mailto:ajithks98086@gmail.com">ajithks98086@gmail.com</a> |
-        <a href="https://www.linkedin.com/in/ajith-k-s/" target="_blank"
-          >LinkedIn</a
-        >
-        <!-- <a class="footer-link" href="https://twitter.com/">Twitter</a> -->
-        <!-- <a class="footer-link" href="https://www.appbrewery.co/">Website</a> -->
+      <div class="bottom-container top-flex copy">
+        <div class="contact-details contact-details-flex atype">
+          <div class="spacer"></div>
+          <div>
+            <span class="pi-bullet-icon"
+              ><i class="fa-solid fa-phone-flip"></i>
+              <strong>Phone No.:</strong></span
+            >
+            <span class="at">+91 7034933473</span>
+          </div>
+          <div>
+            <span class="separator" style="margin-right: 1rem">|</span>
+          </div>
+          <div>
+            <span class="pi-bullet-icon"
+              ><i class="fa-solid fa-envelope"></i>
+              <span><strong>Email:</strong></span></span
+            >
+            <a href="mailto:ajithks98086@gmail.com">ajithks98086@gmail.com</a>
+          </div>
+          <div>
+            <span class="separator">|</span>
+          </div>
+          <div>
+            <a href="https://www.linkedin.com/in/ajith-k-s/" target="_blank"
+              >LinkedIn</a
+            >
+            <!-- <a class="footer-link" href="https://twitter.com/">Twitter</a> -->
+            <!-- <a class="footer-link" href="https://www.appbrewery.co/">Website</a> -->
+          </div>
+          <div class="spacer"></div>
+        </div>
         <p class="copyright">
           Copyright ©
           <script>
