Change cloud width.

--- a/index.html
+++ b/index.html
@@ -28,12 +28,18 @@
   <body>
     <main>
       <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="Cloud's image" />
-        <div class="top-flex">
-          <h1>I'm Ajith K. S.,</h1>
-          <h2>a Full-Stack Web Developer.</h2>
+        <div class="cloud-box">
+          <img class="top-cloud" src="images/cloud.png" alt="Cloud's image" />
+          <div class="top-flex">
+            <h1>I'm Ajith K. S.,</h1>
+            <h2>a Full-Stack Web Developer.</h2>
+          </div>
+          <img
+            class="bottom-cloud"
+            src="images/cloud.png"
+            alt="Cloud's image"
+          />
         </div>
-        <img class="bottom-cloud" src="images/cloud.png" alt="Cloud's image" />
         <img
           class="mountain"
           src="images/mountain.png"
