Add cloud-front.png and cloud-back.png. Fix media query.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       rel="stylesheet"
     />
 
+    <!-- Responsive Images -->
+    <script src="scripts/resp-img.js"></script>
+
     <!-- Font Awesome -->
     <script
       src="https://kit.fontawesome.com/a9caa6910a.js"
