Fix Leveling up.

--- a/index.html
+++ b/index.html
@@ -141,13 +141,11 @@
           </div>
         </div>
         <hr />
+        <h2>Leveling up, one day at a time...</h2>
+        <hr />
         <div class="contact-flex profile-contact-flex">
-          <h2>Get In Touch</h2>
-          <h3>Leveling up, one day at a time.</h3>
-          <p class="contact-message">
-            Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
-            tellus donec dui, ornare erat.
-          </p>
+          <h3>Get In Touch</h3>
+          <p class="contact-message">Interested in working together?</p>
           <a class="btn" href="mailto:ajithks98086@gmail.com">CONTACT ME</a>
         </div>
       </div>
