--- a/index.html
+++ b/index.html
@@ -141,10 +141,15 @@
           </div>
         </div>
         <hr />
-        <h2>Leveling up, one day at a time...</h2>
+        <div class="contact-flex profile-contact-flex">
+          <h2>Leveling up, one day at a time...</h2>
+          <div>
+            <img class="img-flex" src="images/coding.png" alt="coding image" />
+          </div>
+        </div>
         <hr />
         <div class="contact-flex profile-contact-flex">
-          <h3>Get In Touch</h3>
+          <h2>Get In Touch</h2>
           <p class="contact-message">Interested in working together?</p>
           <a class="btn" href="mailto:ajithks98086@gmail.com">CONTACT ME</a>
         </div>
