Reduce size of images.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <hr />
         <div class="contact-flex profile-contact-flex">
           <h2>Leveling up, one day at a time...</h2>
-          <div>
+          <div class="exp-div-1">
             <img class="img-flex" src="images/coding.png" alt="coding image" />
           </div>
         </div>
