--- a/index.html
+++ b/index.html
@@ -30,169 +30,195 @@
   </head>
   <body>
     <main>
-      <div class="top-container">
-        <div class="cloud-box">
-          <img class="top-cloud" src="images/cloud.png" alt="Cloud's image" />
-          <div class="top-flex">
-            <h1>I'm Ajith K. S.,</h1>
-            <h2>a Full-Stack Web Developer.</h2>
+      <!-- Overlay container -->
+      <div class="overlay-container"></div>
+      <!-- <button onclick="closeOverlay()">Close</button> -->
+      <!-- Scrollable content below the overlay -->
+      <div class="scrollable-content">
+        <div class="top-container">
+          <div class="cloud-box">
+            <img class="top-cloud" src="images/cloud.png" alt="Cloud's image" />
+            <div class="top-flex">
+              <h1>I'm Ajith K. S.,</h1>
+              <h2>a Full-Stack Web Developer.</h2>
+            </div>
+            <img
+              class="bottom-cloud"
+              src="images/cloud.png"
+              alt="Cloud's image"
+            />
           </div>
           <img
-            class="bottom-cloud"
-            src="images/cloud.png"
-            alt="Cloud's image"
+            class="mountain"
+            src="images/mountain.png"
+            alt="Mountain's image"
           />
         </div>
-        <img
-          class="mountain"
-          src="images/mountain.png"
-          alt="Mountain's image"
-        />
-      </div>
-      <div class="middle-container">
-        <div class="profile-flex profile-contact-flex">
-          <img class="profile" src="images/Ajith.png" alt="Profile image" />
-          <h2>Hello!</h2>
-          <p class="intro">
-            I enjoy coding things from scratch, and bringing ideas to life in
-            the browser.
-            <br />
-            I'm a detail-oriented, and thoughtful professional, prepared to
-            achieve excellence through selective and focused pursuit of
-            short-term and long-term goals. I possess the ability to work
-            effectively both independently and as part of a team. I prefer to
-            keep learning, continue challenging myself, and do interesting
-            things that matter.
+        <div class="middle-container">
+          <div class="profile-flex profile-contact-flex">
+            <img class="profile" src="images/Ajith.png" alt="Profile image" />
+            <h2>Hello!</h2>
+            <p class="intro">
+              I enjoy coding things from scratch, and bringing ideas to life in
+              the browser.
+              <br />
+              I'm a detail-oriented, and thoughtful professional, prepared to
+              achieve excellence through selective and focused pursuit of
+              short-term and long-term goals. I possess the ability to work
+              effectively both independently and as part of a team. I prefer to
+              keep learning, continue challenging myself, and do interesting
+              things that matter.
+            </p>
+          </div>
+          <hr />
+          <div class="skills">
+            <h2>My Skills</h2>
+            <div class="flex-container">
+              <div>
+                <img class="img-flex" src="images/axios.png" alt="axios logo" />
+              </div>
+              <div>
+                <img
+                  class="img-flex"
+                  src="images/bootstrap.png"
+                  alt="bootstrap logo"
+                />
+              </div>
+              <div>
+                <img class="img-flex" src="images/css.png" alt="css logo" />
+              </div>
+              <div>
+                <img
+                  class="img-flex"
+                  src="images/expressjs.png"
+                  alt="expressjs logo"
+                />
+              </div>
+              <div>
+                <img class="img-flex" src="images/git.png" alt="git logo" />
+              </div>
+              <div>
+                <img class="img-flex" src="images/html.png" alt="html logo" />
+              </div>
+              <div>
+                <img
+                  class="img-flex"
+                  src="images/js.png"
+                  alt="javascript logo"
+                />
+              </div>
+              <div>
+                <img
+                  class="img-flex"
+                  src="images/jquery.png"
+                  alt="jquery logo"
+                />
+              </div>
+              <div>
+                <img
+                  class="img-flex"
+                  src="images/mongodb.png"
+                  alt="mongodb logo"
+                />
+              </div>
+              <div>
+                <img
+                  class="img-flex"
+                  src="images/nodejs.png"
+                  alt="nodejs logo"
+                />
+              </div>
+              <div>
+                <img
+                  class="img-flex"
+                  src="images/postgresql.png"
+                  alt="postgresql logo"
+                />
+              </div>
+              <div>
+                <img
+                  class="img-flex"
+                  src="images/python.png"
+                  alt="python logo"
+                />
+              </div>
+              <div>
+                <img class="img-flex" src="images/react.png" alt="react logo" />
+              </div>
+              <div>
+                <img
+                  class="img-flex"
+                  src="images/restapi.png"
+                  alt="restapi logo"
+                />
+              </div>
+              <div>
+                <img
+                  class="img-flex"
+                  src="images/vscode.png"
+                  alt="visual studio code logo"
+                />
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="contact-flex profile-contact-flex">
+            <h2>Leveling up, one day at a time...</h2>
+            <div class="exp-div-1">
+              <img
+                class="img-flex"
+                src="images/coding.png"
+                alt="coding image"
+              />
+            </div>
+          </div>
+          <hr />
+          <div class="contact-flex profile-contact-flex">
+            <h2>Get In Touch</h2>
+            <p class="contact-message">Interested in working together?</p>
+            <a class="btn" href="mailto:ajithks98086@gmail.com">CONTACT ME</a>
+          </div>
+        </div>
+        <div class="bottom-container top-flex copy">
+          <div class="contact-details contact-details-flex atype">
+            <div class="spacer"></div>
+            <div>
+              <span class="pi-bullet-icon"
+                ><i class="fa-solid fa-phone-flip"></i>
+                <strong>Phone No.:</strong></span
+              >
+              <span class="at">+91 7034933473</span>
+            </div>
+            <div>
+              <span class="separator" style="margin-right: 1rem">|</span>
+            </div>
+            <div>
+              <span class="pi-bullet-icon"
+                ><i class="fa-solid fa-envelope"></i>
+                <span><strong>Email:</strong></span></span
+              >
+              <a href="mailto:ajithks98086@gmail.com">ajithks98086@gmail.com</a>
+            </div>
+            <div>
+              <span class="separator">|</span>
+            </div>
+            <div>
+              <a href="https://www.linkedin.com/in/ajith-k-s/" target="_blank"
+                >LinkedIn</a
+              >
+              <!-- <a class="footer-link" href="https://twitter.com/">Twitter</a> -->
+              <!-- <a class="footer-link" href="https://www.appbrewery.co/">Website</a> -->
+            </div>
+            <div class="spacer"></div>
+          </div>
+          <p class="copyright">
+            Copyright ©
+            <script>
+              document.write(new Date().getUTCFullYear());
+            </script>
+            Ajith K. S. All rights reserved.
           </p>
         </div>
-        <hr />
-        <div class="skills">
-          <h2>My Skills</h2>
-          <div class="flex-container">
-            <div>
-              <img class="img-flex" src="images/axios.png" alt="axios logo" />
-            </div>
-            <div>
-              <img
-                class="img-flex"
-                src="images/bootstrap.png"
-                alt="bootstrap logo"
-              />
-            </div>
-            <div>
-              <img class="img-flex" src="images/css.png" alt="css logo" />
-            </div>
-            <div>
-              <img
-                class="img-flex"
-                src="images/expressjs.png"
-                alt="expressjs logo"
-              />
-            </div>
-            <div>
-              <img class="img-flex" src="images/git.png" alt="git logo" />
-            </div>
-            <div>
-              <img class="img-flex" src="images/html.png" alt="html logo" />
-            </div>
-            <div>
-              <img class="img-flex" src="images/js.png" alt="javascript logo" />
-            </div>
-            <div>
-              <img class="img-flex" src="images/jquery.png" alt="jquery logo" />
-            </div>
-            <div>
-              <img
-                class="img-flex"
-                src="images/mongodb.png"
-                alt="mongodb logo"
-              />
-            </div>
-            <div>
-              <img class="img-flex" src="images/nodejs.png" alt="nodejs logo" />
-            </div>
-            <div>
-              <img
-                class="img-flex"
-                src="images/postgresql.png"
-                alt="postgresql logo"
-              />
-            </div>
-            <div>
-              <img class="img-flex" src="images/python.png" alt="python logo" />
-            </div>
-            <div>
-              <img class="img-flex" src="images/react.png" alt="react logo" />
-            </div>
-            <div>
-              <img
-                class="img-flex"
-                src="images/restapi.png"
-                alt="restapi logo"
-              />
-            </div>
-            <div>
-              <img
-                class="img-flex"
-                src="images/vscode.png"
-                alt="visual studio code logo"
-              />
-            </div>
-          </div>
-        </div>
-        <hr />
-        <div class="contact-flex profile-contact-flex">
-          <h2>Leveling up, one day at a time...</h2>
-          <div class="exp-div-1">
-            <img class="img-flex" src="images/coding.png" alt="coding image" />
-          </div>
-        </div>
-        <hr />
-        <div class="contact-flex profile-contact-flex">
-          <h2>Get In Touch</h2>
-          <p class="contact-message">Interested in working together?</p>
-          <a class="btn" href="mailto:ajithks98086@gmail.com">CONTACT ME</a>
-        </div>
-      </div>
-      <div class="bottom-container top-flex copy">
-        <div class="contact-details contact-details-flex atype">
-          <div class="spacer"></div>
-          <div>
-            <span class="pi-bullet-icon"
-              ><i class="fa-solid fa-phone-flip"></i>
-              <strong>Phone No.:</strong></span
-            >
-            <span class="at">+91 7034933473</span>
-          </div>
-          <div>
-            <span class="separator" style="margin-right: 1rem">|</span>
-          </div>
-          <div>
-            <span class="pi-bullet-icon"
-              ><i class="fa-solid fa-envelope"></i>
-              <span><strong>Email:</strong></span></span
-            >
-            <a href="mailto:ajithks98086@gmail.com">ajithks98086@gmail.com</a>
-          </div>
-          <div>
-            <span class="separator">|</span>
-          </div>
-          <div>
-            <a href="https://www.linkedin.com/in/ajith-k-s/" target="_blank"
-              >LinkedIn</a
-            >
-            <!-- <a class="footer-link" href="https://twitter.com/">Twitter</a> -->
-            <!-- <a class="footer-link" href="https://www.appbrewery.co/">Website</a> -->
-          </div>
-          <div class="spacer"></div>
-        </div>
-        <p class="copyright">
-          Copyright ©
-          <script>
-            document.write(new Date().getUTCFullYear());
-          </script>
-          Ajith K. S. All rights reserved.
-        </p>
       </div>
     </main>
   </body>
